13C. Recibiendo Clave simetrica Aes.